WIP - Configuration Avoidance Discovery - found underlying code the intellij gradle process plugs into